# httpxx

./: .gitignore  CMakeLists.txt  README.md  config.toml  example_server.sh  meson.build  script.py
example/: config.toml  main.cc
example/static/: index.html
example/static/assets/: about.html
example/static/css/: style.css
example/static/js/: index.js
lib/: CMakeLists.txt
lib/core/: http_builders.hh  http_config.hh  http_enums.hh  http_handlers.cc  http_handlers.hh  http_headers.hh  http_object.cpp  http_objects.hh  router.cc  router.hh
lib/deprecated/httpxx/core/: http_builders.hh  http_enums.hh  http_headers.hh  http_objects.hh  router.cc  router.hh
lib/deprecated/httpxx/server/: Server.hh
lib/deprecated/httpxx/util/: httpxx_assert.h
lib/deprecated/httpxx/v2/core/: endpoints.hh
lib/deprecated/httpxx/wrapper/: net.cc  net.hh
lib/handler/: handler.hh
lib/http/: http.hh  request.hh
lib/httpxx/core/: http_builders.hh  http_config.hh  http_enums.hh  http_handlers.cc  http_handlers.hh  http_objects.hh  router.cc  router.hh
lib/httpxx/util/: httpxx_assert.h
lib/httpxx/v2/core/: endpoints.hh  response.h
lib/httpxx/wrapper/: net.hh  opts.hh
lib/impls/wrapper/: net.cc
lib/include/: tomlpp.hh
lib/server/: Server.hh
lib/v2/: CMakeLists.txt  meson.build
lib/v2/httpxx/: configuration.hh  endpoint.hh  enums.hh  objects.hh  request_handlers.hh  router.hh  server.hh  socket.hh  socket_enums.hh
lib/wrapper/: net.hh  opts.hh
src/: main.cc
static/: template.html
tests/: CMakeLists.txt  test_main.cpp
tests/tests/: ConfigTest.h  HttpObjects.h
util/: httpxx_assert.h
